--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,32 +2,43 @@ div {
 	border-radius: 5px;
 }
 
-#theme {
+.theme 
+{
+    width: 96%;
 	height: 50px;
+	margin-left: auto;
+    margin-right: auto;
 	background-color: #F38630;
 	margin-bottom: 10px;
 	
 }
 
-.left {
-	height: 500px;
-	width: 15%;
-/*	background-color: #A7DBD8;*/
-	float: left;
-	margin-bottom: 10px;
+.left-align
+{
+    height: 850px;
+    width: 13%;
+    background-color: #A7DBD8;
+    float: left;
+    margin-bottom: 10px;
+    margin-left:2%;
 }
 
-.right {
-	height: 500px;
-	width: 84%;
+.right-align {
+	height:850px;
+	width: 82%;
 	background-color: #E0E4CC;
 	float: left;
 	margin-bottom: 10px;
 	margin-left:1%;
+	margin-right:1%;
 }
 
 #footer {
 	height: 50px;
+	width: 96%;
+	margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2px;
 	background-color: #69D2E7;
 	/*Add your CSS here!*/
    	clear:both;
