--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -99,12 +99,11 @@ select {
 
 /* Grid HTML Classes */
 .row {
-  width: 100%;
+  width: 98%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0;
-  margin-bottom: 0;
-/*  max-width: 62.5em; */
+  margin-top: 2px;
+ /* max-width: 62.5em;*/
   *zoom: 1;
 }
 .row:before, .row:after {
